--- a/EuroSys2022/numalloc.tex
+++ b/EuroSys2022/numalloc.tex
@@ -1,6 +1,6 @@
-\documentclass[sigplan,review,anonymous]{acmart}
-\acmSubmissionID{22}
-\renewcommand\footnotetextcopyrightpermission[1]{}
+\documentclass[sigconf, review,anonymous]{acmart}
+%\acmSubmissionID{22}
+%\renewcommand\footnotetextcopyrightpermission[1]{}
 % Optional: Remove the ACM reference between the abstract and the main text.
 \settopmatter{printfolios=true,printacmref=false}
 % Optional: Comment out the CCS concepts and keywords.
@@ -66,7 +66,7 @@
 
 \pagenumbering{arabic}
 
-\title{NUMAlloc: Fine-Grained NUMA  Allocator} 
+\title{NUMAlloc: A Faster NUMA Memory Allocator} 
 
 % \author{{\normalsize{HPCA 2022 Submission
 %       \textbf{\#\hpcasubmissionnumber} -- Confidential Draft -- Do NOT Distribute!!}}}
