--- a/EuroSys2022/ref.bib
+++ b/EuroSys2022/ref.bib
@@ -335,7 +335,28 @@ url="http://dx.doi.org/10.1007/978-3-642-35606-3_24"
 @misc{mimalloc,
   author = {Daan Leijen},
   title = {mimalloc},
-  howpublished = {"\url{https://github.com/microsoft/mimalloc}"},
+  howpublished = {\url{https://github.com/microsoft/mimalloc}},
+  year={2020}
+}
+
+@misc{tcmalloc2,
+  author = {Chris Kennelly and Paul Burton},
+  title = {TCMalloc: Implement NUMA awareness},
+  howpublished = {\url{https://github.com/google/tcmalloc/commit/ef7a3f8d794c42705bf4327ca79fa17186904801}},
+  year={2021}
+}
+
+@misc{tbb2,
+  author = {Alex Katranov and Anton Potapov},
+  title = {oneAPI Threading Building Blocks},
+  howpublished = {\url{https://github.com/oneapi-src/oneTBB}},
+  year={2021}
+}
+
+@misc{tbb3,
+  author = {Alex Katranov and Michael Voss},
+  title = {Optimize Intel oneAPI Threading Building Blocks for NUMA Architectures},
+  howpublished = {\url{https://www.intel.com/content/www/us/en/developer/videos/onetbb-optimizing-for-numa-architectures.html#gs.nq6cbg}},
   year={2020}
 }
 
@@ -775,21 +796,21 @@ month={Sept},
 @MISC{twittrends,
   author = {Twitter}, 
   title = {Worldwide Trends},
-  howpublished = "\url{https://twitter.com/hashtag/worldwide?src=hash}",
+  howpublished = {\url{https://twitter.com/hashtag/worldwide?src=hash}},
 }
 
 @MISC{LinuxNUMASupport1,
     author = {Pat Gaughen},
     title = {NUMA Status},
     year = {2002},
-    howpublished = "\url{http://lse.sourceforge.net/numa/status/description.html}"
+    howpublished = {\url{http://lse.sourceforge.net/numa/status/description.html}}
 }
 
 @MISC{LinuxNUMASupport2,
     author = {osgx},
     title = {Shared Library bottleneck on NUMA machine},
     year = {2012},
-    howpublished = "\url{http://lse.sourceforge.net/numa/status/description.html}"
+    howpublished = {\url{http://lse.sourceforge.net/numa/status/description.html}}
 }
 
 @MISC{LinuxNUMASupport3,
@@ -797,7 +818,7 @@ month={Sept},
     title = {NUMA Memory Architectures and the
 Linux Memory System},
     year = {2016},
-    howpublished = "\url{http://pok.acm.org/foils/Ladd16.pdf}"
+    howpublished = {\url{http://pok.acm.org/foils/Ladd16.pdf}}
 }
 
 @inproceedings{Drebes:2016:STP:2967938.2967946,
@@ -823,13 +844,13 @@ Linux Memory System},
     author = {Fredrik Teschke, Lukas Pirl},
     title = {Linux NUMA evolution},	
     year = {2016},
-    howpublished = "\url{https://www.dcl.hpi.uni-potsdam.de/teaching/numasem/slides/NUMASem_Linux_NUMA_evolution.pdf}"
+    howpublished = {\url{https://www.dcl.hpi.uni-potsdam.de/teaching/numasem/slides/NUMASem_Linux_NUMA_evolution.pdf}}
 }
 
 @MISC{Apache,
     author = {Apache Community},
     title = {The Apache HTTP Server Project}, 
-    howpublished = "\url{https://httpd.apache.org/}",
+    howpublished = {\url{https://httpd.apache.org/}},
     year = {2016}
 }
 
