--- a/EuroSys2022/abstract.tex
+++ b/EuroSys2022/abstract.tex
@@ -1,3 +1,4 @@
-The NUMA architecture accommodates the hardware trend of an increasing number of CPU cores. It requires the cooperation of memory allocators to achieve good performance for multithreaded applications. Unfortunately, none of existing memory allocators can support the NUMA architecture well.
-This paper presents a novel memory allocator--\NM{}, that is designed for the NUMA architecture. \NM{} first proposes an origin-based memory management to ensure the locality of memory allocations. It further introduces node-balanced thread binding and an interleaved heap to reduce the load imbalance among different nodes. 
-According to our extensive evaluation, \NM{} has the best performance among all evaluated allocators. It is significantly faster than the second-best one, around 15.8\% on average on an 8-node machine, and is 18.5\% faster than the default Linux allocator. For the best case, \NM{} achieves up to $6.4\times$ performance speedup comparing to the default Linux allocator, and $4.6\times$ faster than the second-best one (TCMalloc). \NM{} is also scalable to 128 threads and is ready for deployment.
+The NUMA architecture accommodates the hardware trend of an increasing number of CPU cores. It requires the cooperation of memory allocators to achieve good performance for multithreaded applications. Unfortunately, none of the existing memory allocators can support the NUMA architecture well.
+This paper presents a novel memory allocator--\NM{}, that is designed for the NUMA architecture. \NM{} is centered on a bind-based memory management. On top of it, \NM{} proposes an origin-aware memory management to ensure the locality of memory allocations, and a thread-shared incremental allocation to balance the performance benefits and memory overhead of transparent huge pages. 
+%It further introduced an interleaved heap to reduce the load imbalance among different nodes. 
+According to our extensive evaluation, \NM{} has the best performance among all evaluated allocators. It is running 17\% faster than the second-best allocator (mimalloc), and 19\% faster than the default Linux allocator. For the best case, \NM{} achieves up to $6.4\times$ performance speedup compared to the second-best allocator (Glibc's allocator). \NM{} is also scalable to 128 threads and is ready for deployment.
